# hyprrdrop

./: Cargo.toml  README.md  flake.nix
nix/: hm-module.nix
src/: cli.rs  main.rs  utils.rs
