[package]
name = "hyprrdrop"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = { version = "0.4.0-alpha.2" }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1" }
log = { version = "0.4" }
